@@ -133,6 +133,7 @@
     <Compile Include="UnitTest\TypeEquivalence.fs" />
     <Compile Include="UnitTest\Basic.fs" />
     <Compile Include="UnitTest\HML.fs" />
+    <Compile Include="UnitTest\Other.fs" />
     <Compile Include="UnitTest\All.fs" />
     <Compile Include="Main.fs" />
     <None Include="test\misc.lw" />
